Updated test classes to no longer use setters where possible.